Update retired message style
- Update dashboard message spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -2313,5 +2313,5 @@ TODO: migrate discussion CSS out of theme
 // Dashboard
 
 #dashboard-main #course-header-100 h1 + *:before{
-  margin: 1em;
+  margin: 1em 1em 0;
 }
