--- a/dev/prototypes/courses/version-2/css/main.scss
+++ b/dev/prototypes/courses/version-2/css/main.scss
@@ -732,6 +732,11 @@ summary {
   margin-top: 1.2rem;
 }
 
+.info dl {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .info dl dt {
   font-size: 0.9em;
   margin-bottom: 0.6rem;
@@ -751,7 +756,6 @@ summary {
   line-height: 1.45;
   padding-top: 1rem;
   border-top: 1px dashed #999;
-  margin-top: 1rem;
 }
 
 .info-details .note dd {
