--- a/_layouts/wrapper-full-default.html
+++ b/_layouts/wrapper-full-default.html
@@ -1,6 +1,6 @@
 {%- include build-timestamp.html -%}
 
-{%- if jekyll.environment == "development" -%}
+{%- if jekyll.environment == "local" -%}
   {%- include partials/test-top.html -%}
 {%- endif -%}
 
@@ -12,6 +12,6 @@
   </div><!-- .row -->
 </div><!-- .container -->
 
-{%- if jekyll.environment == "development" -%}
+{%- if jekyll.environment == "local" -%}
   {%- include partials/test-bottom.html -%}
 {%- endif -%}
