--- a/_layouts/wrapper-home.html
+++ b/_layouts/wrapper-home.html
@@ -2,7 +2,7 @@
 
 {%- assign hero = site.data.hero -%}
 
-{%- if jekyll.environment == "development" -%}
+{%- if jekyll.environment == "local" -%}
   {%- include partials/test-top.html -%}
 {%- endif -%}
 
@@ -58,6 +58,6 @@
   {%- include home/as-seen-in.html -%}
 </div><!-- .home -->
 
-{%- if jekyll.environment == "development" -%}
+{%- if jekyll.environment == "local" -%}
   {%- include partials/test-bottom.html -%}
 {%- endif -%}
