Update prototype enrollment button behavior
- Disable "Enroll Now" call-to-action button

--- a/dev/prototypes/courses/version-2/css/main.scss
+++ b/dev/prototypes/courses/version-2/css/main.scss
@@ -641,7 +641,8 @@ li aside {
 }
 
 .button:hover,
-.button:focus {
+.button:focus,
+.button:active {
   color: #fff;
   background-color: #666;
 }
@@ -656,6 +657,11 @@ li aside {
 
 .button + * {
   margin-top: 1.4rem;
+}
+
+.button[href$="/info"]:focus,
+.button[href$="/info"]:active {
+  pointer-events: none;
 }
 
 summary {
