Logic & copy changes
Web Design > Design
Web Accessibility > Accessibility

--- a/_includes/take5/hero-take5-featured.html
+++ b/_includes/take5/hero-take5-featured.html
@@ -28,8 +28,8 @@
     {%- when "User Experience" -%}
     {%- assign hero_style = "topic-user-experience" -%}
 
-    {%- when "Web Design & Development" -%}
-    {%- assign hero_style = "topic-web-design-development" -%}
+    {%- when "Design & Development" -%}
+    {%- assign hero_style = "topic-design-development" -%}
 
 {%- endcase -%}
 
