--- a/_includes/take5/recommended-content.html
+++ b/_includes/take5/recommended-content.html
@@ -27,7 +27,7 @@ TODO: rather than hard-coding values here, a more flexible method would be to cr
   {%- assign course2 = site.data.courses.GYM-015 -%}
   {%- assign course3 = site.data.courses.GYM-008 -%}
 
-{%- elsif course.topic == "Web Design & Development" -%}
+{%- elsif course.topic == "Design & Development" -%}
 
   {%- assign course1 = site.data.courses.GYM-109 -%}
   {%- assign course2 = site.data.courses.GYM-107 -%}
