--- a/_includes/home/featured-courses.html
+++ b/_includes/home/featured-courses.html
@@ -30,7 +30,7 @@
         {%- assign content_class = "development" -%}
     {%- elsif site.data.courses[featured].topic == "Prototyping" -%}
         {%- assign content_class = "user-experience" -%}
-    {%- elsif site.data.courses[featured].topic == "Web Design & Development" -%}
+    {%- elsif site.data.courses[featured].topic == "Design & Development" -%}
         {%- assign content_class = "design-development" -%}
     {%- elsif site.data.courses[featured].topic == "User Experience" -%}
         {%- assign content_class = "user-experience" -%}
@@ -69,7 +69,7 @@
   </div>
   <div class="about-featured-courses">
     <div class="description">
-      <p>Design a career you love with free online courses on web design and development, accessibility, UX, prototyping, content creation, and career skills.</p>
+      <p>Design a career you love with free online courses on design, development, accessibility, prototyping, UX, and career skills.</p>
     </div>
     <div class="cta">
      <a class="gym-button" href="https://thegymnasium.com/courses"><b>View all Courses</b></a>
