--- a/partials/sidebar-generic.html
+++ b/partials/sidebar-generic.html
@@ -34,7 +34,7 @@ permalink: /partials/sidebar-generic/
     </figcaption>
   </figure>
   <h2>UX Fundamentals</h2>
-  <p>Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in web design and development.</p>
+  <p>Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in design and development.</p>
 </section>
 
 <!-- Temporary HTML for style hooks -->
